k8s/uService-user/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: backend
  labels: 
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: mihajlodj/devops-user-service:1.2.0  # Update with your actual image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: backend
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
