k8s/uService-user/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/users
            backend:
              service:
                name: user-service
                port:
                  number: 8080
